# eq-plotter

./: .gitignore  Cargo.toml  README.md
app-lib/: Cargo.toml
app-lib/src/: lib.rs  persistence.rs  presets.rs  settings.rs
app-lib/src/settings/: mod.rs  ui.rs
audio-lib/: Cargo.toml
audio-lib/src/: envelope_follower.rs  eq.rs  lib.rs  utils.rs  windows.rs
audio-lib/src/biquad/: coefficients.rs  filter.rs  mod.rs  utils.rs
audio-lib/src/fft/: log_frequency_bins.rs  mod.rs  processor.rs  signal_analyzer.rs
audio-lib/src/spsc/: swap.rs
egui-lib/: Cargo.toml
egui-lib/src/: colors.rs  lib.rs  options.rs  utils.rs
egui-lib/src/control/: eqs.rs  mod.rs
egui-lib/src/plotter/: gain.rs  impulse_response.rs  mod.rs  phase.rs  poles_and_zeros.rs
eq-plotter-egui/: Cargo.toml
eq-plotter-egui/src/: colors.rs  constants.rs  control.rs  eq_plotter.rs  lib.rs  main.rs  options.rs  plotter.rs  utils.rs
eq-plotter-egui/src/plotter/: gain.rs  impulse_response.rs  mod.rs  phase.rs  poles_and_zeros.rs
eq-plotter-slint/: Cargo.toml  build.rs
eq-plotter-slint/src/: eq_plotter.rs  lib.rs  main.rs  plotters.rs
eq-plotter-slint/src/plotters/: render.rs  style.rs
eq-plotter-slint/ui/: eq-plotter-ui.slint  eq-plotter.slint
eq-plugin-egui/: Cargo.toml  bundler.toml
eq-plugin-egui/src/: analyzer.rs  config.rs  editor.rs  lib.rs  main.rs  params.rs  plugin.rs  processor.rs
eq-plugin-egui/src/params/: eq_params.rs  eq_type.rs  mod.rs  show_params.rs
src/: eq.rs  main.rs  utils.rs
src/biquad/: coefficients.rs  filter.rs  mod.rs  utils.rs
wasm_out/: howto_run.txt  index.html
xtask/: Cargo.toml
