[workspace]
resolver= "3"
members = [
    "app-lib",
    "audio-lib",
    "eq-plotter-egui",
    "eq-plotter-slint",
    "eq-plugin-egui",
    "xtask"
]

[workspace.dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
num = "0.4.3"
num-traits = "0.2.19"
app-lib = { path = "app-lib" }
audio-lib = { path = "audio-lib" }
eq-plotter-egui = { path = "eq-plotter-egui" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
