[package]
name = "audio-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_approx_eq = { workspace = true }
atomic_enum = { workspace = true }
enum-table = { workspace = true }
more-asserts = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_arrays = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
rustfft = { workspace = true }
