[package]
name = "eq-plotter-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }
enum-table = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_arrays = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Window", "HtmlCanvasElement"] }

app-lib = { workspace = true }
audio-lib = { workspace = true }
egui-lib = { workspace = true }

[build-dependencies]
wasm-bindgen = { version = "0.2", optional = true }
