[package]
name = "eq-plotter-slint"
version = "0.1.0"
edition = "2021"

[features]
plot-svg = []

[dependencies]
num = { workspace = true }
num-traits = { workspace = true }

app-lib = { workspace = true }
audio-lib = { workspace = true }

plotters = "0.3"
slint = { version = "1.16" }

[build-dependencies]
slint-build = "1.16"
