[package]
name = "eq-plugin-egui"
version = "0.1.0"
edition = "2021"
authors = ["Stephan Widor <stephan@widor.online>"]
license = "GPL-3.0-or-later"
homepage = "https://widor.online"
description = "Simple Eq Plugin"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
egui = { workspace = true }
egui_plot = { workspace = true }

nice-plug = { git = "https://codeberg.org/BillyDM/nice-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
nice-plug-egui = { git = "https://codeberg.org/BillyDM/nice-plug.git" }

app-lib = { path = "../app-lib" }
audio-lib = { path = "../audio-lib" }
eq-plotter-egui = { workspace = true }
